--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p class="text-lg md:text-xl">Web Developer | Firebase | PHP | ASP.NET</p>
     <div class="mt-6 flex gap-4">
       <a href="#projects" class="px-5 py-2 bg-white text-indigo-600 rounded-lg font-medium shadow-md hover:bg-indigo-100">View Projects</a>
-      <a href="Shreyas_Gurav_Resume.pdf" download class="px-5 py-2 bg-white text-indigo-600 rounded-lg font-medium shadow-md hover:bg-indigo-100">Download Resume</a>
+      <a href="Shreyas_Gurav_resume.pdf" download class="px-5 py-2 bg-white text-indigo-600 rounded-lg font-medium shadow-md hover:bg-indigo-100">Download Resume</a>
     </div>
   </section>
 
